hphp/hack/test/typecheck/unsafe_cast/lvalue.php.exp
File "lvalue.php", line 4, characters 3-54:
You cannot use this syntax on the left-hand side of an assignment. (Parsing[1002])
